# nutorch

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  nutorch.nu
cargo/: Cargo.toml
cargo/src/: command_exp.rs  command_linspace.rs  command_max.rs  command_randn.rs  command_repeat_interleave.rs  command_reshape.rs  command_stack.rs
cargo/test/: test_detach.nu  test_linspace.nu  test_log_softmax.nu  test_maximum.nu  test_repeat_interleave.nu  test_reshape.nu  test_stack.nu  test_sum.nu
issues/: README.md
issues/0002-nutorchd-poc/: 01-toolchain-proof.md  03-compute-ops.md  README.md
issues/0004-daemon-lifecycle/: 01-daemon-side-lifecycle.md  02-client-autospawn-and-verbs.md  README.md
issues/0005-tensor-op-suite/: 01-op-table-architecture.md  02-pointwise-sweep.md  04-linalg-shape-sweep.md  README.md
issues/0006-tensor-lifecycle-and-roundtrip/: 01-torch-free.md  02-torch-tensors.md  03-lossless-roundtrip.md  README.md
issues/0007-daemon-concurrency/: 01-thread-per-connection.md  README.md
issues/0008-autograd/: 01-autograd-surface.md  README.md
issues/0009-nn-optim/: 01-typed-handles.md  02-module-foundation.md  03-losses.md  04-optimizers.md  05-module-sweep.md  README.md
issues/0010-nushell-module/: README.md
issues/0011-homebrew-distribution/: 02-the-formula.md  README.md
issues/0012-nutorch-dot-com/: 01-skeleton-and-brand.md  02-the-docs.md  03-ops-reference.md  04-search-and-polish.md  README.md
issues/0013-website-fixes/: 03-hero-rework.md  04-three-state-theme.md  05-hero-shell-tabs.md  07-no-dev-toolbar.md  README.md
issues/0014-nutorch-cli-alias/: 01-the-symlink.md  01-vendor-autoload.md  README.md
issues/0016-dual-input-nushell/: 01-generator-delegation.md  02-the-docs-straighten.md  README.md
issues/0017-mirrored-examples/: 01-prelude-dual-input.md  02-the-mirror.md  README.md
issues/0018-shape-op/: 01-shape-op-end-to-end.md  README.md
issues/0019-shape-on-the-website/: 01-document-shape-on-tensors-page.md  README.md
issues/0020-nushell-torch-command/: 01-rename-nushell-namespace.md  02-clear-verification-blockers.md  README.md
nutorchd/: Cargo.toml
nutorchd/src/: convert.rs  dispatch.rs  lib.rs  lifecycle.rs  main.rs  nn.rs  protocol.rs  registry.rs
nutorchd/tests/: golden.json  golden.rs
ops/: Cargo.toml
ops/src/: lib.rs
scripts/: gen-golden.py  install.sh  make-source-tarball.sh  test-dual-input.nu  train-classify.sh  train-regression.nu  train-regression.sh
torch-cli/: Cargo.toml
torch-cli/src/: main.rs
v1/: README.md  TODO.md
v1/cargo/: Cargo.toml
v1/cargo/src/: command_add.rs  command_arange.rs  command_argmax.rs  command_backward.rs  command_cat.rs  command_detach.rs  command_devices.rs  command_div.rs  command_free.rs  command_full.rs  command_gather.rs  command_grad.rs  command_log_softmax.rs  command_manual_seed.rs  command_maximum.rs  command_mean.rs  command_mm.rs  command_mul.rs  command_neg.rs  command_repeat.rs  command_reshape.rs  command_sgd_step.rs  command_shape.rs  command_sin.rs  command_softmax.rs  command_squeeze.rs  command_sub.rs  command_sum.rs  command_t.rs  command_tensor.rs  command_torch.rs  command_unsqueeze.rs  command_value.rs  command_zero_grad.rs  lib.rs  main.rs
v1/cargo/test/: package.json  pnpm-lock.yaml  test_add.nu  test_arange.nu  test_argmax.nu  test_backward.nu  test_cat.nu  test_div.nu  test_exp.nu  test_free.nu  test_full.nu  test_gather.nu  test_grad.nu  test_max.nu  test_mean.nu  test_mm.nu  test_mul.nu  test_neg.nu  test_randn.nu  test_repeat.nu  test_sgd_step.nu  test_shape.nu  test_sin.nu  test_softmax.nu  test_squeeze.nu  test_sub.nu  test_t.nu  test_tensor.nu  test_unsqueeze.nu  test_value.nu  test_zero_grad.nu
v1/npm/: matrix.nu
website/: astro.config.mjs  package.json  wrangler.toml
website/public/: robots.txt
website/scripts/: check-content.ts  check-links.ts  check-mirror.ts  check-shell-tabs.ts  gen-ops-reference.ts  (+2 more)
(+37 files in other folders)
