# Nutorch v2 workspace. v1/cargo is the archived v1 crate and is NOT a member.
#
# Build note: libtorch comes from the repo-local torch 2.11.0 venv via the
# `.libtorch` symlink, pinned (force-override) in .cargo/config.toml.
# One-time setup AND build: scripts/bootstrap.sh (idempotent — skips the
# torch download when .venv-torch already exists). Install with
# scripts/install.sh. See issues/0011-homebrew-distribution/.

[workspace]
members = ["nutorchd", "ops", "torch-cli"]
resolver = "2"

[workspace.package]
version = "1.0.1"
