[package]
name = "nutorchd"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Nutorch v2 daemon: a tensor database for the shell (PoC)"

[dependencies]
nutorch-ops = { path = "../ops" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
signal-hook = "0.3"
tch = "0.24.0"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
