[package]
name = "nutorch"
version = "0.1.4"
authors = ["Ryan X. Charles <ryan@ryanxcharles.com> (https://ryanxcharles.com)"]
documentation = "https://github.com/nutorch/nutorch"
edition = "2021"
homepage = "https://nutorch.com"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/nutorch/nutorch"
description = "Nutorch is a wrapper for tch-rs, itself a wrapper for libtorch, the C++ backend for PyTorch. It provides a plugin for Nushell to use PyTorch tensors on the command line."

[[bin]]
name = "nu_plugin_torch"
path = "src/main.rs"

[dependencies]
lazy_static = "1.5.0"
nu-plugin = "0.108.0"
nu-protocol = "0.108.0"
tch = { version = "0.20.0" }
uuid = { version = "1.17.0", features = ["v4"] }
